# library-director

./: .gitignore  README.md  flake.nix
backend/: cabal.project  cabal.project.freeze  hie.yaml  library-director.cabal
backend/src/: Application.hs  DevReload.hs  Site.hs
backend/src-main/: Main.hs
