cabal-version:      3.0
name:               library-director
version:            0.1.0.0
synopsis:           A library management server built with Snap
description:        Library Director is a web server for managing library resources,
                    built using the Snap framework in Haskell.
license:            MIT
license-file:       LICENSE
author:             Your Name
maintainer:         your.email@example.com
category:           Web
build-type:         Simple

common warnings
    ghc-options:      -Wall
                      -Wcompat
                      -Widentities
                      -Wincomplete-record-updates
                      -Wincomplete-uni-patterns
                      -Wmissing-export-lists
                      -Wmissing-home-modules
                      -Wpartial-fields
                      -Wredundant-constraints

library
    import:           warnings
    exposed-modules:  Site
                    , Application
    
    build-depends:    base
                    , snap-core
                    , snap-server
                    , snap
                    , lens
                    , bytestring
                    , text
                    , aeson
                    , mtl
                    , containers
                    , time

    hs-source-dirs:   src
    default-language: GHC2021

executable library-director
    import:           warnings
    main-is:          Main.hs
    
    build-depends:    base
                    , library-director
                    , snap
                    , snap-server
                    , bytestring

    hs-source-dirs:   src-main
    default-language: GHC2021
    
    ghc-options:      -threaded
                      -rtsopts
                      -with-rtsopts=-N
